tweaked overflow issue

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,8 +1,3 @@
-html,
-body {
-    overflow: hidden;
-}
-
 header,
 section {
     scroll-snap-align: start;
