--- a/styles/style.css
+++ b/styles/style.css
@@ -236,11 +236,6 @@ html {
   overflow: hidden;
 }
 
-html,
-body {
-  overflow: hidden;
-}
-
 header,
 section {
   scroll-snap-align: start;
